--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pandas = "~=1.0"
 autopep8 = "*"
 django-modeltranslation = "*"
 django-private-storage = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
