--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "# MealPlan Meal planner which keeps the ingredients and recipes you use (and no more) and your inventory",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development --watch ./mealplan/frontend/src/index.js --output ./mealplan/frontend/static/frontend/main.js",
-    "build": "webpack --mode production ./mealplan/frontend/src/index.js --output ./mealplan/frontend/static/frontend/main.js"
+    "dev": "webpack --mode development --config ./webpack.config.js --watch",
+    "build": "webpack --mode production --config ./webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -23,11 +23,17 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "css-loader": "^3.5.2",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "style-loader": "^1.1.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "antd": "^4.1.4",
     "axios": "^0.19.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
