--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.0.6",
     "antd": "^4.1.4",
     "axios": "^0.19.2",
     "prop-types": "^15.7.2",
