add empty recipe views and install named-urls

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ant-design/icons": "^4.0.6",
     "antd": "^4.1.4",
     "axios": "^0.19.2",
+    "named-urls": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
